--- a/src/app/pages/student/appointment/appointment.component.html
+++ b/src/app/pages/student/appointment/appointment.component.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
     <main>
-        <header>
-            <nav>
-                <button class="back-button">←</button>
+        <div class="top">
+            <div class="back-arrow">
+                <img src="assets/images/flecha-izquierda.png" alt="flecha" routerLink="/home/student/inicio">
+            </div>
+            <div class="title">
                 <h1>Citas</h1>
-            </nav>
-            <p class="subtitle">Explora tus intereses con expertos en la carrera de tu elección</p>
-        </header>
+                <p>Explora tus intereses con expertos en la carrera de tu elección</p>
+            </div>
+        </div>
 
         <div class="search-container">
             <span class="search-icon">🔍</span>
