--- a/src/app/pages/student/community/community.component.html
+++ b/src/app/pages/student/community/community.component.html
@@ -5,8 +5,8 @@
                 <img src="assets/images/flecha-izquierda.png" alt="flecha" routerLink="/home/student/inicio">
             </div>
             <div class="title">
-                <h1>Test Vocacional</h1>
-                <p>Sección de test para el estudiante</p>
+                <h1>Comunidad</h1>
+                <p>Explora las comunidades de todas las universidades y carreras</p>
             </div>
         </div>
 
