--- a/src/app/pages/student/test/preguntas/test-1.component.html
+++ b/src/app/pages/student/test/preguntas/test-1.component.html
@@ -17,18 +17,39 @@
                 <div class="question">¿Qué tanto disfrutas realizar actividades creativas como dibujar, escribir o diseñar?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[1].q1" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tanto disfrutas resolver problemas o acertijos complejos?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[1].q2" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tanto disfrutas realizar actividades creativas como dibujar, escribir o diseñar?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[1].q3" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -40,18 +61,39 @@
                 <div class="question">¿Qué tan competente te consideras para resolver problemas matemáticos o lógicos?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[2].q1" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tan bueno eres en comunicarte de manera efectiva con otras personas?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[2].q2" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tan habilidoso te consideras en tareas manuales o prácticas?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[2].q3" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -63,18 +105,39 @@
                 <div class="question">¿Qué tan importante es para ti tener estabilidad laboral en tu futuro trabajo?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[3].q1" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tan importante es que tu trabajo te permita ser creativo?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[3].q2" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tanto valoras la posibilidad de tener un impacto positivo en la sociedad?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[3].q3" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -86,18 +149,39 @@
                 <div class="question">¿Qué tan competente te consideras para resolver problemas matemáticos o lógicos?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[4].q1" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tan bueno eres en comunicarte de manera efectiva con otras personas?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[4].q2" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tan habilidoso te consideras en tareas manuales o prácticas?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[4].q3" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -109,18 +193,39 @@
                 <div class="question">¿Te sientes más cómodo tomando decisiones importantes por ti mismo?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[5].q1" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tan dispuesto estás a asumir riesgos en un ambiente laboral?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[5].q2" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
             <div class="question-container">
                 <div class="question">¿Qué tanto te gustan los trabajos que requieren atención a los detalles?</div>
                 <div class="slider-container">
                     <input type="range" min="1" max="5" [(ngModel)]="answers[5].q3" class="slider">
+                    <div class="slider-labels">
+                        <div class="slider-value" id="value1">1</div>
+                        <div class="slider-value" id="value1">2</div>
+                        <div class="slider-value" id="value1">3</div>
+                        <div class="slider-value" id="value1">4</div>
+                        <div class="slider-value" id="value1">5</div>
+                    </div>
                 </div>
             </div>
         </div>
