feat:Termine las confirmaciones de citas

--- a/src/app/pages/student/appointment/appointment.component.html
+++ b/src/app/pages/student/appointment/appointment.component.html
@@ -15,24 +15,24 @@
             <input type="text" placeholder="Buscar asesores">
         </div>
 
-        <div class="advisors-list">
-            <div class="advisor-card">
+        <div class="advisors-list" >
+            <div class="advisor-card" routerLink="/home/student/Confirmacion">
                 <span>Francisco Emanuel Aguilar</span>
                 <button class="mail-button">✉</button>
             </div>
-            <div class="advisor-card">
+            <div class="advisor-card" routerLink="/home/student/Confirmacion">
                 <span>Francisco Emanuel Aguilar</span>
                 <button class="mail-button">✉</button>
             </div>
-            <div class="advisor-card">
+            <div class="advisor-card" routerLink="/home/student/Confirmacion">
                 <span>Francisco Emanuel Aguilar</span>
                 <button class="mail-button">✉</button>
             </div>
-            <div class="advisor-card">
+            <div class="advisor-card" routerLink="/home/student/Confirmacion">
                 <span>Francisco Emanuel Aguilar</span>
                 <button class="mail-button">✉</button>
             </div>
-            <div class="advisor-card">
+            <div class="advisor-card" routerLink="/home/student/Confirmacion">
                 <span>Francisco Emanuel Aguilar</span>
                 <button class="mail-button">✉</button>
             </div>
