--- a/src/app/pages/student/appointment/appointment.component.html
+++ b/src/app/pages/student/appointment/appointment.component.html
@@ -1,40 +1,40 @@
-<!DOCTYPE html>
-    <main>
-        <div class="top">
-            <div class="back-arrow">
-                <img src="assets/images/flecha-izquierda.png" alt="flecha" routerLink="/home/student/inicio">
-            </div>
-            <div class="title">
-                <h1>Citas</h1>
-                <p>Explora tus intereses con expertos en la carrera de tu elección</p>
-            </div>
-        </div>
 
-        <div class="search-container">
-            <span class="search-icon">🔍</span>
-            <input type="text" placeholder="Buscar asesores">
+<div class="container">
+    <div class="top">
+        <div class="back-arrow">
+            <img src="assets/images/flecha-izquierda.png" alt="flecha" routerLink="/home/student/inicio">
         </div>
+        <div class="title">
+            <h1>Citas</h1>
+            <p>Explora tus intereses con expertos en la carrera de tu elección</p>
+        </div>
+    </div>
 
-        <div class="advisors-list" >
-            <div class="advisor-card" routerLink="/home/student/Confirmacion">
-                <span>Francisco Emanuel Aguilar</span>
-                <button class="mail-button">✉</button>
-            </div>
-            <div class="advisor-card" routerLink="/home/student/Confirmacion">
-                <span>Francisco Emanuel Aguilar</span>
-                <button class="mail-button">✉</button>
-            </div>
-            <div class="advisor-card" routerLink="/home/student/Confirmacion">
-                <span>Francisco Emanuel Aguilar</span>
-                <button class="mail-button">✉</button>
-            </div>
-            <div class="advisor-card" routerLink="/home/student/Confirmacion">
-                <span>Francisco Emanuel Aguilar</span>
-                <button class="mail-button">✉</button>
-            </div>
-            <div class="advisor-card" routerLink="/home/student/Confirmacion">
-                <span>Francisco Emanuel Aguilar</span>
-                <button class="mail-button">✉</button>
-            </div>
+    <div class="search-container">
+        <span class="search-icon">🔍</span>
+        <input type="text" placeholder="Buscar asesores">
+    </div>
+
+    <div class="advisors-list" >
+        <div class="advisor-card" routerLink="/home/student/Confirmacion">
+            <span>Francisco Emanuel Aguilar</span>
+            <button class="mail-button">✉</button>
         </div>
-    </main>
+        <div class="advisor-card" routerLink="/home/student/Confirmacion">
+            <span>Francisco Emanuel Aguilar</span>
+            <button class="mail-button">✉</button>
+        </div>
+        <div class="advisor-card" routerLink="/home/student/Confirmacion">
+            <span>Francisco Emanuel Aguilar</span>
+            <button class="mail-button">✉</button>
+        </div>
+        <div class="advisor-card" routerLink="/home/student/Confirmacion">
+            <span>Francisco Emanuel Aguilar</span>
+            <button class="mail-button">✉</button>
+        </div>
+        <div class="advisor-card" routerLink="/home/student/Confirmacion">
+            <span>Francisco Emanuel Aguilar</span>
+            <button class="mail-button">✉</button>
+        </div>
+    </div>
+</div>
