--- a/src/app/pages/student/community/community.component.html
+++ b/src/app/pages/student/community/community.component.html
@@ -1,4 +1,4 @@
-<main>
+<div class="container">
     <div class="content">
         <div class="top">
             <div class="back-arrow" >
@@ -11,12 +11,12 @@
         </div>
 
         <div class="forum-container">
-            <button class="forum-button" (click)="navigateToForo()">Foro UPC<br><span>Click para navegar</span></button>
-            <button class="forum-button" (click)="navigateToForo()">Foro ULima<br><span>Click para navegar</span></button>
-            <button class="forum-button" (click)="navigateToForo()">Foro UP<br><span>Click para navegar</span></button>
-            <button class="forum-button" (click)="navigateToForo()">Foro Ingeniería<br><span>Click para navegar</span></button>
-            <button class="forum-button" (click)="navigateToForo()">Foro Ciencias de la Salud<br><span>Click para navegar</span></button>
-            <button class="forum-button" (click)="navigateToForo()">Foro Arquitectura<br><span>Click para navegar</span></button>
+            <button class="forum-button" (click)="navigateToForo()">Foro UPC</button>
+            <button class="forum-button" (click)="navigateToForo()">Foro ULima</button>
+            <button class="forum-button" (click)="navigateToForo()">Foro UP</button>
+            <button class="forum-button" (click)="navigateToForo()">Foro Ingeniería</button>
+            <button class="forum-button" (click)="navigateToForo()">Foro Ciencias de la Salud</button>
+            <button class="forum-button" (click)="navigateToForo()">Foro Arquitectura</button>
         </div>
     </div>
-</main>
+</div>
