--- a/src/app/pages/student/foro/foro.component.html
+++ b/src/app/pages/student/foro/foro.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <main>
+  <div class="foro-container">
     <div class="sidebar">
-      <div class="back-button"><img src="assets/images/flecha-izquierda.png" routerLink="/home/student/community"></div>
+      <div class="back-arrow"><img src="assets/images/flecha-izquierda.png" routerLink="/home/student/community"></div>
       <button class="forum-button">Foro UPC</button>
       <button class="forum-button">Foro ULima</button>
       <button class="forum-button">Foro UP</button>
@@ -9,7 +9,7 @@
       <button class="forum-button">Foro Ciencias de la Salud</button>
       <button class="forum-button">Foro Arquitectura</button>
     </div>
-  
+
     <div class="chat-area">
       <div class="chat-header">Foro UPC</div>
       <div class="chat-messages">
@@ -23,6 +23,6 @@
         <button class="send-button" (click)="sendMessage()">➤</button>
       </div>
     </div>
-  </main>
+  </div>
 </div>
   
