--- a/src/app/pages/confirmacion-cita/confirmacion-cita.component.html
+++ b/src/app/pages/confirmacion-cita/confirmacion-cita.component.html
@@ -1,5 +1,5 @@
     <div class="container">
-        <div class="card">
+        <div class="confirmation-card">
             <!-- Header -->
        
             <div class="top">
