--- a/src/app/pages/student/community/community.component.css
+++ b/src/app/pages/student/community/community.component.css
@@ -6,6 +6,14 @@
   font-family: Arial, sans-serif;
 }
 
+.container {
+  display: flex;
+  
+  width: 100%;
+  height: 85vh;
+  justify-content: center;
+}
+
 .top {
   max-width: 1340px;
   width: 100%;
@@ -15,9 +23,23 @@
 
 .back-arrow {
   font-size: 24px;
-  color: #333;
+  color: #fff;
   cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: 0.5s;
+  margin: 10px;
+}  
+
+img {
+  max-width: 100%;
 }
+
+.back-arrow:hover {
+  background-color: #0000003f;
+}
+
 
 h1 {
   font-size: 24px;
@@ -63,6 +85,8 @@ p {
 }
 
 .forum-button {
+  cursor: pointer;
+  font-size: 20px;
   width: 400px;
   height: 200px;
   background-color: #01A7C2;
@@ -70,13 +94,14 @@ p {
   border: none; /* Eliminamos el borde estándar */
   border-radius: 15px; /* Bordes curvados */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra alrededor del botón */
-  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out; /* Transición suave */
+  transition: 0.5s /* Transición suave */
 }
 
 /* Efecto al pasar el ratón */
 .forum-button:hover {
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Sombra más pronunciada al hacer hover */
-  transform: translateY(-2px); /* Mueve el botón ligeramente hacia arriba al hacer hover */
+  background-color: #0092AA;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada al hacer hover */
+  transform: translateY(-3px); /* Mueve el botón ligeramente hacia arriba al hacer hover */
 }
 
 /*Imagen boton*/
