--- a/src/app/pages/student/foro/foro.component.css
+++ b/src/app/pages/student/foro/foro.component.css
@@ -15,7 +15,15 @@ body {
     padding: 0;
 }
 
-main {
+.container {
+    display: flex;
+    width: 100%;
+    height: 85vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.foro-container {
     display: flex;
     width: 100%;
     background-color: white;
@@ -27,12 +35,6 @@ main {
     overflow: hidden;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    
-}
-
 .sidebar {
     width: 25%; /* Reducimos el ancho de la barra lateral para dar más espacio al chat */
     background-color: #01A7C2;
@@ -42,10 +44,23 @@ main {
     gap: 10px;
 }
 
-.back-button {
-    color: #333;
-    font-size: 20px;
+.back-arrow {
+    font-size: 24px;
+    color: #fff;
     cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    transition: 0.5s;
+    margin: 10px;
+}  
+
+img {
+    max-width: 100%;
+}
+
+.back-arrow:hover {
+    background-color: #0000003f;
 }
 
 .forum-button {
@@ -57,6 +72,7 @@ main {
     font-size: 16px;
     cursor: pointer;
     text-align: left;
+    transition: 0.5s;
 }
 
 .forum-button:hover {
@@ -129,6 +145,7 @@ main {
     padding: 10px 15px;
     border-radius: 50%;
     cursor: pointer;
+    transition: 0.5s;
 }
 
 .send-button:hover {
