--- a/src/app/pages/student/test/preguntas/test-1.component.css
+++ b/src/app/pages/student/test/preguntas/test-1.component.css
@@ -6,9 +6,23 @@
 
 .back-arrow {
     font-size: 24px;
-    color: #333;
+    color: #fff;
     cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    transition: 0.5s;
+    margin: 10px;
+}  
+
+img {
+    max-width: 100%;
 }
+
+.back-arrow:hover {
+    background-color: #0000003f;
+}
+
 
 h1 {
     font-size: 24px;
