--- a/src/app/shared/components/navbar-student/navbar-student.component.css
+++ b/src/app/shared/components/navbar-student/navbar-student.component.css
@@ -100,6 +100,7 @@ header .navbar li a.active::after {
 }
 
 .menu-content {
+    width: 129px;
     position: absolute;
     top: 100%;
     right: 0;
