--- a/src/app/pages/confirmacion-cita/confirmacion-cita.component.html
+++ b/src/app/pages/confirmacion-cita/confirmacion-cita.component.html
@@ -7,7 +7,7 @@
                     <img src="assets/images/flecha-izquierda.png" alt="flecha" routerLink="/home/student/appointment">
                 </div>
                 <div class="title">
-                    <h1>Francisco Emanuel Aguilar</h1>
+                    <h1>Asesor de carreras</h1>
                     <p>Horarios disponibles:</p>
                 </div>
             </div>
