--- a/src/app/pages/student/foro/foro.component.html
+++ b/src/app/pages/student/foro/foro.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="chat-area">
-      <div class="chat-header">Foro UPC</div>
+      <div class="chat-header">Foro General</div>
       <div class="chat-messages">
         <div *ngFor="let message of messages" class="message">
           <img src="assets/images/profile.png" alt="Avatar" class="avatar">
