feat:test-service

--- a/src/app/pages/student/test/test.component.html
+++ b/src/app/pages/student/test/test.component.html
@@ -12,8 +12,8 @@
         <div class="content">
             <div class="left">
                 <button (click)="navigateToTest()">Reanudar test</button>
-                <button (click)="navigateToTest()">Realizar nuevo test</button>
-                <button>Ver historial de resultados</button>
+                <button (click)="navigateToNewTest()">Realizar nuevo test</button>
+                <button (click)="navigateToResults()">Ver historial de resultados</button>
             </div>
             <div class="right">
                 <h2>Foros para estudiar</h2>
