--- a/src/app/pages/student/test/preguntas/test-1.component.css
+++ b/src/app/pages/student/test/preguntas/test-1.component.css
@@ -36,17 +36,6 @@ p {
     margin-bottom: 20px;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: #f4f4f9;
-    margin: 0;
-    padding: 20px;
-}
-
 .container {
     display: flex;
     width: 100%;
@@ -70,6 +59,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    min-width: 600px;
 }
 
 .question {
