--- a/src/app/pages/student/appointment/appointment.component.html
+++ b/src/app/pages/student/appointment/appointment.component.html
@@ -12,7 +12,7 @@
 
     <div class="search-container">
         <span class="search-icon">🔍</span>
-        <input type="text" placeholder="Buscar asesores" (input)="searchQuery = $event.target.value; onSearch()">
+        <!--<input type="text" placeholder="Buscar asesores" (input)="searchQuery = $event.target.value; onSearch()">-->
     </div>
 
     <div class="advisors-list" >
