--- a/src/app/pages/student/show-results/show-results.component.html
+++ b/src/app/pages/student/show-results/show-results.component.html
@@ -61,7 +61,7 @@
         </div>
         </div>
         <footer>
-        <button class="continue-button" (click)="navigateToTest()">Continuar</button>
+        <button class="continue-button" (click)="navigateToResultadosGuardados()">Continuar</button>
         </footer>
     </div>
 </div>
