--- a/src/app/shared/components/navbar-student/navbar-student.component.html
+++ b/src/app/shared/components/navbar-student/navbar-student.component.html
@@ -16,7 +16,7 @@
                 <img src="assets/images/menu-icon.png" alt="menu-icon" class="menu-icon">
             </label>
             <div class="menu-content">
-                <a href="#">Cerrar sesión</a>
+                <a href="#" (click)="cerrarSesion()">Cerrar sesión</a>
             </div>
         </div>
     </header>
