--- a/src/app/pages/student/test/preguntas/test-1.component.css
+++ b/src/app/pages/student/test/preguntas/test-1.component.css
@@ -39,7 +39,7 @@ p {
 .container {
     display: flex;
     width: 100%;
-    height: 85vh;
+    /* height: 85vh; */
     align-items: center;
     justify-content: center;
     text-align: center;
