--- a/src/app/pages/confirmacion-cita/confirmacion-cita.component.css
+++ b/src/app/pages/confirmacion-cita/confirmacion-cita.component.css
@@ -172,3 +172,85 @@ p {
         padding: 0.875rem;
     }
 }
+
+
+
+
+.signup-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'sans-serif', Poppins;
+    gap: 48px;
+    padding: 80px 0;
+
+    /* Header */
+    .header {
+        display: flex;
+        gap: 24px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header img {
+        width: 120px;
+        height: 120px;
+    }
+
+    .header p {
+        margin: 0;
+        color: #006989;
+        font-size: 48px;
+        font-weight: 600;
+    }
+
+    /* Buttons */
+    .buttons {
+        display: flex;
+        gap: 24px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .buttons input[type=button] {
+        cursor: pointer;
+    }
+
+    .buttons .signup {
+        background-color: #01A7C2;
+        outline: none;
+        border: none;
+        padding: 12px 72px;
+        border-radius: 4px;
+        color: #fff;
+        font-size: 16px;
+        min-width: 350px;
+    }
+
+    .buttons .cancel {
+        background-color: #fff;
+        outline: none;
+        border: none;
+        padding: 12px 72px;
+        border-radius: 4px;
+        color: #01A7C2;
+        font-size: 16px;
+        border: 1px solid #01A7C2;
+        min-width: 350px;
+    }
+
+    /* Message Box */
+    .message-box {
+        background-color: #01a7c236;
+        padding: 12px 24px;
+        border: 1px solid #01A7C2;
+        color: #01A7C2;
+        border-radius: 4px;
+    }
+
+    .message-box p {
+        font-size: 14px;
+        font-weight: 300;
+    }
+
+}
