fix: mostrar numero de resultado

--- a/src/app/pages/student/show-results/show-results.component.html
+++ b/src/app/pages/student/show-results/show-results.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="title">
                 <h1>RESULTADOS</h1>
-                <p>Resultados del test número {{resultid}}</p>
+                <p>Resultados del test número {{index}}</p>
             </div>
         </div>
 
